ready for workflow test

--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -12,11 +12,11 @@ jobs:
       name: Testing functionality
       steps:
         - name: Checkout
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
         - name: Test RUN of PSEUDO-API Generator
           id: mdBook_site_to_JSON
           uses: ./
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             mbBook_url: https://rust-lang.github.io/mdBook/
-            queries_json_raw: https://raw.githubusercontent.com/EzioTheDeadPoet/actions-mdBook-indexer/POST/queries.json
+            output_branch: POST
