--- a/action.yml
+++ b/action.yml
@@ -2,20 +2,20 @@ name: 'mdBook to JSON file'
 description: 'A GitHub Action that takes an mdBook url input and generates an indexed JSON file of all pages.'
 inputs:
   github_token:
-    description: 'Github token to be able to create and push the output branch'
+    description: 'Github token required to push the json files to the "api" branch. \n Use ${{ secrets.GITHUB_TOKEN }}'.
     required: true
   mbBook_url:
-    description: 'Enter url to mdBook based wiki'
+    description: 'mdBook based website, that you want to search via an "api"'
     required: true
     default: "https://rust-lang.github.io/mdBook/"
+  api_branch:
+    description: 'Branch name for the branch that will be housing the json files for the "api".'
+    required: true
+    default: "GET"
   reprocess_cache:
-    description: 'If all queries should be regenerated or not'
+    description: 'If all queries should be re-processed,cleaning the cache. Should be used when teh mdBook site updated.'
     required: false
     default: false
-  output_branch:
-    description: 'branch where the json will be pushed to'
-    required: false
-    default: "GET"
 branding:
   icon: 'file-text'
   color: 'blue'
@@ -30,21 +30,26 @@ runs:
       uses: logikal-io/install-chrome@v1.0.1
       with:
         version: 113.0.5672.63-1
-    - name: Check out repo
+    - name: Install API Generator (Checkout Code)
       uses: actions/checkout@v3
       with:
         repository: 'EzioTheDeadPoet/actions-mdBook-indexer'
+    - name: Get API Cache Branch
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ inputs.api_branch }}
+        path: ./src/out
         fetch-depth: 0
     - name: Install Python Dependencies
       run: pip install -r ./requirements.txt
       shell: bash
-    - name: Index mdBook to JSON
+    - name: Generate raw.JSON mdBook api
       id: index_task
-      run: python src/generate_index_JSON.py ${{ inputs.mbBook_url }} ${{ inputs.queries_json_raw }} ${{inputs.reprocess_cache}}
+      run: python src/generate_index_JSON.py ${{ inputs.mbBook_url }} ${{ github.repository }} ${{ inputs.api_branch }} ${{inputs.reprocess_cache}}
       shell: bash
-    - name: Deploy Data
+    - name: Deploy raw.JSON mdBook api
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ inputs.github_token }}
         publish_dir: ./src/out
-        publish_branch: ${{ inputs.output_branch }}
+        publish_branch: ${{ inputs.api_branch }}
