--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
     description: 'mdBook based website, that you want to search via an "api"'
     required: true
     default: "https://rust-lang.github.io/mdBook/"
+  api_repo:
+    descripion: 'repository housing the "api"'
+    required: true
   api_branch:
     description: 'Branch name for the branch that will be housing the json files for the "api".'
     required: true
