--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -19,4 +19,5 @@ jobs:
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             mbBook_url: https://rust-lang.github.io/mdBook/
+            api_repo: ${{ github.repository }}
             output_branch: POST
